# dreamlint

./: .gitignore  README.md  cmd_run.go  cmd_run_test.go  dreamlint-gemini.cue  dreamlint.cue  go.mod  go.sum  integration_test.go  main.go  pipeline_golden_test.go  reviewmod.cue
analyze/: parse.go  parse_test.go  pipeline.go  prompt.go  prompt_test.go  schema.go
analyze/prompts/: _base.txt  baseline.txt  concurrency.txt  context-auth.txt  correctness.txt  distributed.txt  domain-types.txt  functional-core.txt  http.txt  layout.txt  maintainability.txt  observability.txt  security.txt  summary.txt  testing.txt  type_summary.txt
config/: config.go  config_test.go  schema.cue
config/testdata/: anthropic.cue  auto.cue  base.cue  gemini.cue  only.cue  openai.cue  override.cue  simple.cue
docs/plans/: 2026-01-18-reviewmod-design.md  (+1 more)
examples/: README.md  examples_test.go
examples/web/: http.cue  (+4 more)
extract/: callgraph.go  callgraph_test.go  external.go  extract.go  extractor.go  go_extractor.go  types.go  units.go  units_test.go
extract/scipextract/testdata/cmake-example/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  generate.sh  index.scip  pipeline.golden
extract/scipextract/testdata/cmake-example/src/: main.cpp  math.cpp  math.h
llm/: client.go  mock.go  openai.go
prompts/: _base.txt  api-design.txt  cleanliness.txt  complexity.txt  concurrency.txt  dependencies.txt  errors.txt  logging.txt  performance.txt  resources.txt  security.txt  summary.txt  testing.txt  validation.txt
report/: json.go  markdown.go  markdown_test.go  report.go  sarif.go
(+83 files in other folders)
